--- a/.github/workflows/build-and-deploy-docker-imageon.yml
+++ b/.github/workflows/build-and-deploy-docker-imageon.yml
@@ -8,15 +8,14 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
+      - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -27,7 +26,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/python-agents-demo:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest
 
-      - name: Deploy (replace with your deployment steps)
-        run: echo "Add your deployment commands here"
+      - name: Logout from DockerHub
+        run: docker logout
+
+# Note: 
+# - Add `DOCKERHUB_USERNAME` and `DOCKERHUB_TOKEN` to your GitHub repository secrets.
+# - Customize the Docker image name if needed.
