--- a/.github/workflows/build-and-deploy-docker-image-on.yml
+++ b/.github/workflows/build-and-deploy-docker-image-on.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -16,7 +15,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to DockerHub
+      - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -25,6 +24,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest
+
+      - name: Deploy
+        run: echo "Add your deployment step here"
