--- a/.github/workflows/build-and-deploy-docker-image.yml
+++ b/.github/workflows/build-and-deploy-docker-image.yml
@@ -5,13 +5,16 @@ on:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -27,9 +30,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/python-agents-demo:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest
 
-      - name: Deploy to Server
-        if: github.ref == 'refs/heads/main'
-        run: |
-          echo "Add your deployment commands here, e.g., SSH or Kubernetes deployment"
+      - name: Logout from DockerHub
+        run: docker logout
