--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,51 +4,71 @@ on:
   push:
     branches:
       - main
+      - 'feature/**'
+      - 'release/**'
+    tags:
+      - '*'
   pull_request:
     branches:
       - main
 
+env:
+  REGISTRY: docker.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
-  build-and-deploy:
+  prepare-node-version:
+    runs-on: ubuntu-latest
+    outputs:
+      node: ${{ steps.get-node.outputs.node }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Extract node version from package.json
+        id: get-node
+        run: |
+          echo "node=$(node -p \"require('./package.json').engines && require('./package.json').engines.node ? require('./package.json').engines.node : '18'\")" >> $GITHUB_OUTPUT
+
+      - name: Debug extracted node version
+        run: echo "Node version is ${{ steps.get-node.outputs.node }}"
+
+  build-test-deploy:
+    needs: prepare-node-version
     runs-on: ubuntu-latest
     env:
-      REGISTRY: docker.io
-      IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker
-
+      NODE_VERSION: ${{ needs.prepare-node-version.outputs.node }}
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ env.NODE_VERSION }}
 
-      - name: Cache npm dependencies
+      - name: Cache node modules
         uses: actions/cache@v4
+        id: cache
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: |
+            **/node_modules
+            ~/.npm
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Lint
+      - name: Run lint
         run: npm run lint
-        continue-on-error: true
 
-      - name: Run Tests
-        run: npm test -- --watch=false --browsers=ChromeHeadless
-        continue-on-error: true
+      - name: Run tests
+        run: npm test -- --watch=false --browsers=ChromeHeadless --code-coverage
 
       - name: Build Angular app
-        run: npm run build -- --prod
-
-      - name: Extract short SHA
-        id: vars
-        run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        run: npm run build -- --configuration production
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -56,22 +76,50 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push Docker image
+      - name: Docker build cache setup
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Build Docker image
+        id: docker_build
         uses: docker/build-push-action@v5
         with:
           context: .
           file: Dockerfile
-          push: ${{ github.ref == 'refs/heads/main' }}
+          push: false
+          build-args: |
+            NODE_VERSION=${{ env.NODE_VERSION }}
           tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ steps.vars.outputs.SHORT_SHA }}
-          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:buildcache
-          cache-to: type=registry,ref=${{ env.IMAGE_NAME }}:buildcache,mode=max
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
-      - name: Deploy
-        if: github.ref == 'refs/heads/main'
-        run: |
-          echo "No deployment steps documented. Please add deployment commands here if required."
+      - name: Push Docker image (main/prd branches, tags only)
+        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          build-args: |
+            NODE_VERSION=${{ env.NODE_VERSION }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+
+      - name: Logout from Docker Hub
+        if: always()
+        run: docker logout ${{ env.REGISTRY }}
