--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,83 +4,84 @@ on:
   push:
     branches:
       - main
-      - 'feature/**'
-      - 'release/**'
-    tags:
-      - '*'
   pull_request:
     branches:
       - main
 
 env:
-  REGISTRY: docker.io
-  IMAGE_NAME: ${{ github.repository }}
+  NODE_VERSION: '18.x'
+  DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}     # Example: ghcr.io, docker.io, etc.
+  DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE }}           # Example: your-docker-username/angular-demo
+  REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }} # Username for Docker registry
+  REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }} # Password or token for Docker registry
 
 jobs:
-  prepare-node-version:
+  build-and-test:
     runs-on: ubuntu-latest
-    outputs:
-      node: ${{ steps.get-node.outputs.node }}
+    strategy:
+      matrix:
+        node-version: [18.x]
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Extract node version from package.json
-        id: get-node
-        run: |
-          echo "node=$(node -p \"require('./package.json').engines && require('./package.json').engines.node ? require('./package.json').engines.node : '18'\")" >> $GITHUB_OUTPUT
-
-      - name: Debug extracted node version
-        run: echo "Node version is ${{ steps.get-node.outputs.node }}"
-
-  build-test-deploy:
-    needs: prepare-node-version
-    runs-on: ubuntu-latest
-    env:
-      NODE_VERSION: ${{ needs.prepare-node-version.outputs.node }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
+      - name: Use Node.js version from matrix
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ matrix.node-version }}
 
-      - name: Cache node modules
+      - name: Cache node_modules
         uses: actions/cache@v4
-        id: cache
         with:
           path: |
             **/node_modules
-            ~/.npm
-          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
+            ${{ runner.os }}-node-${{ matrix.node-version }}-
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run lint
+      - name: Lint
         run: npm run lint
 
       - name: Run tests
-        run: npm test -- --watch=false --browsers=ChromeHeadless --code-coverage
+        run: npm test -- --watch=false --browsers=ChromeHeadless
 
       - name: Build Angular app
-        run: npm run build -- --configuration production
+        run: npm run build -- --configuration=production
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: angular-dist
+          path: dist/
+
+  docker:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: angular-dist
+          path: dist/
+
+      - name: Log in to Docker registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ env.REGISTRY_USERNAME }}
+          password: ${{ env.REGISTRY_PASSWORD }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Docker build cache setup
+      - name: Cache Docker layers
         uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
@@ -89,37 +90,32 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Build Docker image
-        id: docker_build
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
-          push: false
-          build-args: |
-            NODE_VERSION=${{ env.NODE_VERSION }}
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+          push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}:${{ github.sha }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
 
-      - name: Push Docker image (main/prd branches, tags only)
-        if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+      - name: Push Docker image (main branch only)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
           push: true
-          build-args: |
-            NODE_VERSION=${{ env.NODE_VERSION }}
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}:latest,${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}:${{ github.sha }}
           cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
-      - name: Logout from Docker Hub
-        if: always()
-        run: docker logout ${{ env.REGISTRY }}
+# NOTES & PLACEHOLDERS
+# - Populate repository secrets:
+#   - DOCKER_REGISTRY: Your Docker registry domain (e.g. ghcr.io, docker.io, etc.)
+#   - DOCKER_IMAGE: Docker repository name (e.g. yourusername/angular-demo)
+#   - REGISTRY_USERNAME: Docker registry username or token user
+#   - REGISTRY_PASSWORD: Docker registry password or Personal Access Token
+# - Update the npm scripts if yours differ (e.g., lint, test, build).
+# - This pipeline uses cache for npm install and Docker build layers to speed up builds.
+# - Artifacts from the Angular build step are downloaded in the Docker job for accurate packaging.
+# - Multi-stage Dockerfiles are highly recommended for production builds.
+# - Matrix strategy is defined for flexibility; expand as needed.
