--- a/.github/workflows/build-and-deploy-docker-imageon.yml
+++ b/.github/workflows/build-and-deploy-docker-imageon.yml
@@ -9,8 +9,13 @@ on:
       - main
 
 env:
+  IMAGE_NAME: angulardemodocker
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  DOCKERFILE_PATH: ./Dockerfile
+  BUILD_CONTEXT: .
+  DEPLOY_SERVER: ${{ secrets.DEPLOY_SERVER }}
+  DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+  DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
 
 jobs:
   build:
@@ -25,37 +30,54 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub container registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract version from package.json
+      - name: Extract version
         id: vars
         run: |
-          VERSION=$(jq -r '.version' package.json)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "VERSION=$(date +%Y%m%d%H%M%S)-${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: Dockerfile
-          platforms: linux/amd64,linux/arm64
+          context: ${{ env.BUILD_CONTEXT }}
+          file: ${{ env.DOCKERFILE_PATH }}
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.vars.outputs.version }}
-
-      - name: Image digest output
-        run: echo "Image pushed with digest ${{ steps.buildx.outputs.digest }}"
+            ${{ env.REGISTRY }}/${{ github.repository }}:${{ env.VERSION }}
+            ${{ env.REGISTRY }}/${{ github.repository }}:latest
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
     if: github.ref == 'refs/heads/main'
     steps:
-      - name: Deploy to Server (Placeholder)
-        run: echo "Insert your deployment script here, such as Docker run/compose or a cloud deployment step."
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ env.DEPLOY_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Add SSH host key
+        run: |
+          ssh-keyscan -H ${{ env.DEPLOY_SERVER }} >> ~/.ssh/known_hosts
+
+      - name: Pull and run Docker image on remote server
+        run: |
+          IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:latest
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ env.DEPLOY_USER }}@${{ env.DEPLOY_SERVER }} << EOF
+            docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
+            docker pull $IMAGE
+            docker stop angulardemodocker || true
+            docker rm angulardemodocker || true
+            docker run -d --name angulardemodocker -p 80:80 $IMAGE
+          EOF
+
